# mlops-zoomcamp

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
01-intro/: README.md  duration-prediction.ipynb  homework.ipynb  notes.md
02-experiment-tracking/: README.md  duration-prediction.ipynb  notes.md
02-experiment-tracking/homework/: homework.ipynb  homework.py  preprocess_data.py
03-orchestration/homework/: homework.ipynb
03-orchestration/homework/dags/: orchestrate.py
04-deployment/: README.md
04-deployment/batch/: score.ipynb  score.py
04-deployment/homework/: Dockerfile  predict.py
04-deployment/web-service-mlflow/: random-forest.ipynb
05-monitoring/: README.md  docker-compose.yml  dummy_metrics_calculation.py  evidently_metrics_calculation.py
05-monitoring/config/: grafana_dashboards.yaml  grafana_datasources.yaml
05-monitoring/homework/: homework.ipynb
cohorts/2022/04-deployment/: homework.md
cohorts/2023/01-intro/: homework.md
cohorts/2023/02-experiment-tracking/: homework.md
cohorts/2023/03-orchestration/: homework.md
cohorts/2023/04-deployment/: homework.md
cohorts/2023/04-deployment/homework/: starter.ipynb
generate/: generate_pages.ipynb
