[tool.poetry]
name = "mlops-zoomcamp"
version = "0.1.0"
description = "Code for my MLOps Zoomcamp's exercise submissions"
authors = ["DataTalksClub", "Fernando Cordeiro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
seaborn = "^0.12.2"
numpy = "1.24.x"  # NumPy 1.25 throws an error with llvmlite
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
mlflow = "^2.3.2"
hyperopt = "^0.2.7"
pyarrow = "*"
xgboost = "^1.7.5"
click = "^8.1.3"
optuna = "^3.2.0"

# Monitoring
prefect = "^2.11.1"
requests = "^2.31.0"
joblib = "^1.3.1"
psycopg = "^3.1.9"
psycopg-binary = "^3.1.9"
evidently = "^0.4.0"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.3.0"}
pre-commit = "^3.3.2"
ruff = "^0.0.269"
ipython = "^8.13.2"
notebook = "^6.5.4"
isort = "^5.12.0"

[tool.poetry.group.orchestrate]
optional = true

[tool.poetry.group.orchestrate.dependencies]
apache-airflow = "2.6.2"
prefect = "^2.10.14"
prefect-email = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
